# ssd-alignment

./: diagnose_rotation.py  eval_checkpoint_1200.json  eval_checkpoint_400.json  eval_checkpoint_750.json  eval_checkpoint_800.json
configs/: default_config.json  qwen_7b_rank16_medical.json
modal/: setup.py  setup2.py  train.py
ssd/: README.md  __init__.py  modal_app.py  pyproject.toml
ssd/data_generation/: config.yaml  generate.py
ssd/finetune/: train.py
