[project]
name = "ssd"
version = "0.1.0"
description = "Simple Self-Distillation for EM alignment experiments"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
data-generation = [
    "vllm>=0.4.0",
    "jinja2",
    "datasets",
    "pyarrow",
    "pyyaml",
]
finetune = [
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.28.0",
]
modal = [
    "modal>=0.62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
